--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -29,13 +29,15 @@ googleAnalytics = "G-R94R4YKFEC"
     { email = "mailto:hisamshar@gmail.com" },
     
     { linkedin = "https://linkedin.com/in/hisammehboob" },
-    { x-twitter = "https://twitter.com/hisamshar" },
+  
+    { goodreads = "https://www.goodreads.com/user/show/120239398-hisam-shar" },
     { github = "https://github.com/hissamshar" },
     #{ medium = "https://medium.com/@nunocoracao" },
     #{ hackernews = "https://news.ycombinator.com/user?id=nunocoracao"},
     #{ mastodon = "https://masto.ai/@nunocoracao" },
-    #{ instagram = "https://instagram.com/nunocoracao" },
-    { goodreads = "http://goodreads.com/hisamshar" },
+    { x-twitter = "https://x.com/hisam_shar/" },
+    { instagram = "https://www.instagram.com/hissamshar/" },
+
     #{ reddit = "https://reddit.com/user/nunoheart" },
     #{ telegram = "https://t.me/nunocoracao" },
     #{ music = "/music" },
